<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_activity"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/visit_profile_image"
        android:src="@drawable/profile_image"
        android:layout_marginTop="110dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/visit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@+id/visit_profile_image"/>

    <TextView
        android:id="@+id/visit_user_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/visit_user_name"/>

    <Button
        android:id="@+id/send_message_request_button"
        android:layout_below="@+id/visit_user_status"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:textColor="@android:color/background_light"
        android:background="@drawable/buttons"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/send_message"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/decline_message_request_button"
        android:layout_below="@+id/send_message_request_button"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:textColor="@android:color/background_light"
        android:background="@drawable/buttons"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/decline_message"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>


</RelativeLayout>